--- a/content/posts/2022-12-16-1001.md
+++ b/content/posts/2022-12-16-1001.md
@@ -1,8 +1,7 @@
 ---
-id: 1001
 date: 2022-12-16T05:02:04.948Z
-url: /{{year}}/{{month}}/{{day}}/{{slug}}
+url: /2022/12/16/1001
 ---
-I want to see Mastodon succeed. I think the approach makes sense, where anyone can create thier own server, but still be connected to the whole network. But, I recognize there is a lot of work to be done and while they have a lot of attention on them, now is when they need financial support which comes through donations.
+I want to see Mastodon succeed. I think the approach makes sense, where anyone can create their own server, but still be connected to the whole network. But, I recognize there is a lot of work to be done and while they have a lot of attention on them, now is when they need financial support which comes through donations.
 
 Join me and support the primary [Mastodon Patreon](https://joinmastodon.org/sponsors). Also, if you are part of an independent instance, see if they need financial support to run the server.
