fix: Use HTML character code in some instances and remove broken image

--- a/content/posts/2020-04-23-865.md
+++ b/content/posts/2020-04-23-865.md
@@ -26,4 +26,4 @@ aliases:
 ---
 <p>Oh, this is such a good statement from my coworker, Lina, on getting buy-in on design systems:</p>
 <p>“It doesn’t have to happen all it once, but it does have to happen intentionally.”</p>
-<p>#SparkboxUnConf Posted via <a href="http://twitter.com/zastrow/status/1253360876159148032">Twitter</a></p>
+<p>&#35;SparkboxUnConf Posted via <a href="http://twitter.com/zastrow/status/1253360876159148032">Twitter</a></p>
