--- a/content/posts/2020-07-17-879.md
+++ b/content/posts/2020-07-17-879.md
@@ -25,4 +25,4 @@ aliases:
   - /2020/07/879/
 ---
 <p>Twitter says I’ve been here for 12 years. Yay?<br />
-#MyTwitterAnniversary https://t.co/qGMWBcBtyl Posted via <a href="http://twitter.com/zastrow/status/1284326486112186370">Twitter</a></p>
+&#35;MyTwitterAnniversary https://t.co/qGMWBcBtyl Posted via <a href="http://twitter.com/zastrow/status/1284326486112186370">Twitter</a></p>
