--- a/content/posts/2016-01-14-the-shift.md
+++ b/content/posts/2016-01-14-the-shift.md
@@ -24,9 +24,9 @@ aliases:
 <p>Here’s how it works:</p>
 <ul>
 <li>a topic is announced on the first Monday of each month</li>
-<li>if you’re able to contribute, you announce publicly that you’re participating in this shift using “#startYourShift” hashtag<br />
+<li>if you’re able to contribute, you announce publicly that you’re participating in this shift using “&#35;startYourShift” hashtag<br />
 -everyone is invited to research, consider, and publish about that topic on the last Friday of the month at noon Eastern</li>
-<li>all contributors share a link to their piece using “#startYourShift” hashtag on Twitter and any other platforms where they please</li>
+<li>all contributors share a link to their piece using “&#35;startYourShift” hashtag on Twitter and any other platforms where they please</li>
 <li>we all get to be part of an industry-wide conversation on a specific topic</li>
 </ul>
 </blockquote>
