--- a/content/posts/2018-10-09-533.md
+++ b/content/posts/2018-10-09-533.md
@@ -22,4 +22,4 @@ slug: 533
 aliases:
   - /2018/10/533/
 ---
-<p><img src="http://maps.google.com/maps/api/staticmap?center=39.903944105676445,-83.43092824171089&amp;zoom=16&amp;size=710x440&amp;maptype=roadmap&amp;sensor=false&amp;markers=color:red%7C39.903944105676445,-83.43092824171089&amp;key=<span style="caret-color: rgba(0, 0, 0, 0.988235); color: rgba(0, 0, 0, 0.988235); font-family: Roboto, sans-serif; font-size: 12px; font-style: normal; font-variant-caps: normal; font-weight: normal; letter-spacing: 0.11999999731779099px; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); -webkit-text-size-adjust: 100%; -webkit-text-stroke-width: 0px; background-color: rgb(250, 250, 250); text-decoration: none; display: inline !important; float: none">AIzaSyDE9XviuXajRA0qn_rqAPzcHI5rQx5J2Zo</span>" alt="" /><span>📍</span> Checked in at <a href="http://4sq.com/bj7PgK">Los Mariachis</a>.</p>
+<p><span>📍</span> Checked in at <a href="http://4sq.com/bj7PgK">Los Mariachis</a>.</p>
